##Text encoding: utf-8

2012-01-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/bond.cc: don't crash when a Newman bond has no radius.
	* tests/testgcuperiodic.c (main): make it build with gtk+-3.2.

2012-01-11  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/bond.cc: fixed Newman bond radius when bond length changes.
	* plugins/paint/bonds/newman.cc: make property page work.
	* plugins/paint/bonds/newman.h: ditto.
	* plugins/paint/bonds/newman.ui: ditto.

2012-01-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* pixmaps/Makefile.am: restore mime types related pixmaps installation.

2012-01-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/poly-line.cc: use auto color when needed.
	* libs/gcp/atom.cc: fixed a bonds crossing issue.
	* libs/gcp/atom.h: ditto.
	* libs/gcp/bond.cc: ditto.
	* libs/gcp/bond.h: ditto.
	* libs/gcp/fragment-residue.cc: when changing residue, update the symbol.
	* libs/gcp/fragment-residue.h: ditto.
	* libs/gcp/fragment.cc: ditto.
	* libs/gcp/reaction.cc: better building, not perfect yet.
	* plugins/paint/bonds/Makefile.am: new Newman projection tool.
	* plugins/paint/bonds/newman.cc: ditto.
	* plugins/paint/bonds/newman.h: ditto.
	* plugins/paint/bonds/newman.ui: ditto.
	* plugins/paint/bonds/plugin.cc: ditto.

2011-12-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/molecule.cc: fixed loading of crossing bonds.

2011-12-20  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/Makefile.am: add scheme.[cc,h].
	* libs/gcp/arrow.cc: add steps.
	* libs/gcp/arrow.h: ditto.
	* libs/gcp/reaction-arrow.cc: move steps to base class.
	* libs/gcp/reaction-arrow.h: ditto.
	* libs/gcp/reaction-step.cc: move arrows management to parent class.
	* libs/gcp/reaction-step.h: ditto.
	* libs/gcp/reaction.cc: make Reaction derive from Scheme. 
	* libs/gcp/reaction.h: ditto.
	* libs/gcp/scheme.cc: new parent class for reactions and more. Manage
	alignment for any number of arrows.
	* libs/gcp/scheme.h: ditto.